src/index.css
* {
  margin: 0;
  padding: 0;
  margin: 0;
  min-width: 0;
}

body {
  display: block;
}

.app {
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: 100vh;
}

.main-container {
  display: flex;
  flex-grow: 1;
}

.tabs-container {
  display: flex;
  position: sticky;
  top: 0;
  z-index: 2;
  background-color: rgb(42, 38, 38);
}

.tab {
  display: flex;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  border-right: 1px solid #2b2b2b;
  color: white;
  background-color: #1f1f1f;
  border-top-right-radius: 8px;
  border-top-left-radius: 8px;
}

.tab-name {
  font-size: 15px;
  font-weight: 600;
  margin-left: 10px;
  width: 10rem;
  overflow: hidden;
}

.tab-close-button {
  height: 10px;
  width: 10px;
  background-color: red;
  margin-left: 12px;
  margin-right: 10px;
}

.editor-container {
  display: flex;
  height: 100%;
  flex-grow: 1;
}

.line-container {
  flex: 1;
  background-color: #1b1c26;
  cursor: text;
}

.line {
  position: relative;
  height: 1em;
}

.line:focus {
  background-color: red;
}

.default-line-text {
  position: absolute;
  color: white;
  font-family: "DM Mono", monospace;
  font-size: 13px;
}

.line-number-container {
  display: flex;
  width: 80%;
  text-align: center;
  color: white;
  height: 1em;
  margin: auto;
}

.line-number {
  font-size: 13px;
  color: #6e7681;
  margin: auto;
  font-family: "DM Mono", monospace;
}

.line-numbers-column {
  width: 3.5em;
  background-color: #1f1f1f;
}

.cursor {
  position: absolute;
  width: 1.5px;
  height: 1em;
  background-color: #0078d4;
}

